updated at: 2023-07-31 18:36, 朝食セット - IKA 3DCG art studio - BOOTH

--- a/VRChat/14/1166414.html
+++ b/VRChat/14/1166414.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "XAJeeW8jCfG87fcWLdPL8nluAduhfqOM7Jtmi9d/Z2w="></script>
+    "8oc8b+LBFFlgA8woo1PDzwP6KHpZWEx9mjjOLrUyd1I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"朝食セット","description":"＜内容データ＞\n■unitypackage\n　　・fbxデータ\n　　・テクスチャ\n　　・マテリアル\n\n※Macでの使用の際は、標準の解凍ソフトではエラーが出てしまうので、拡張子 Unity package を取り出せる解凍ソフトをご使用ください。\n🦑が把握している解凍ソフトは、「The Unarchiver」です。\nhttps://apps.apple.com/jp/app/the-unarchiver/id425424353?mt=12\n\n【利用規約（簡易版）】\n　　■最終更新日】2021.02.13\n　　■著作者　IKAmeshi（イカめし）\n\n🆗＜利用可能な事について＞🆗\n・当データーを使用したVtuberの作成\n・当データーを使用したVtuber等の動画での収益化\n・VRChat等VRゲームでの利用\n・当データーを使用して作られたゲームや動画などの販売。\n　　　　※モデルデーターそのものを販売することは禁止です\n・改変（テクスチャの色変更、モデル形状編集）する行為。D\n　その改変した物をゲームなどに使用する行為。\n・著作権表示、使用報告は必要ありません。\n　使用した際に動画などで宣伝したりクレジットに載せて頂けると嬉しいです🦑\n\n🆖＜利用不可な事について＞🆖\n・当データーを販売する行為\n・当データーを改変したものを配布、販売する行為\n・当データーを、インターネット上にデーターをアップロードし、不特定多数の人に使用、ダウンロードさせる行為\n\n＜注意＞\n・当データは、予告なく一時的または長期的にデザイン・内容当を変更する事があります。\n・当テータは、予告なく一時的または長期的に配信を中止する場合がございます。\n・当データー使用することによって生じたいかなるトラブルや損害についてイカめしは責任を負いません。\n・本モデルの著作権は作者であるイカめしに帰属します。\n※データになにか不備がありましたらご連絡ください\n\n■連絡先■\nIKAmeshi（イカめし）\nMail : sato.no.ikameshi@gmail.com\nTwitter : https://twitter.com/ikameshi_vr\n","url":"https://booth.pm/ja/items/1166414","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a3840435-c2dd-4e4c-98d0-405e5db05f58/i/1166414/43242a2d-88e2-4689-bf1e-9fdff0b0ffb2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XAJeeW8jCfG87fcWLdPL8nluAduhfqOM7Jtmi9d/Z2w="></script>
+    nonce="8oc8b+LBFFlgA8woo1PDzwP6KHpZWEx9mjjOLrUyd1I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -410,9 +410,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
