--- a/VRChat/21/1149621.html
+++ b/VRChat/21/1149621.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "nb/27haK7ow9dX2iMm9yZsJsHnvmIOz9+yO5V77t9u4="></script>
+    "ZAfsluiluXCfrQgSpAM1iOSVcGHZ5MnBn3PVFKHpfq8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用アバター　魔法剣士　紅乃瀬アキノRemasterVer　VCC　VRM同梱","description":"◆魔法剣士　紅乃瀬アキノ\n・紅乃瀬アキノ（こうのせあきの）\n科学技術で魔力を制御するという\nコンセプトのキャラクター。\n機械でできたグリップ部分に魔力で刃を生成します。\n\n◆アバター紹介画像では英語メニューしかないですが、日本語のメニューもあります。\n・全てのテクスチャの色変え用のPSDファイル同梱。\n\n◆試着用VRChatワールドあります。\n起動用URLはこちら。\nhttps://vrchat.com/home/launch?worldId=wrld_95558c9f-d703-44f3-aca0-43ad03c2cec8\n\n購入して使用してくれた方がいましたら\nハッシュタグ#アノマロ工房　付きでツイートしてくれるとエゴサが捗ります。","url":"https://booth.pm/ja/items/1149621","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"3000"},"image":"https://booth.pximg.net/c/620x620/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1149621/d5f5af5c-7599-4a28-b104-54daa0cd0343_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nb/27haK7ow9dX2iMm9yZsJsHnvmIOz9+yO5V77t9u4="></script>
+    nonce="ZAfsluiluXCfrQgSpAM1iOSVcGHZ5MnBn3PVFKHpfq8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -761,9 +761,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
