--- a/VRChat/74/1164874.html
+++ b/VRChat/74/1164874.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "uDnMjFi1zvsf+jGhtPl/4pXpTgDE41wr+e2zccSogeA="></script>
+    "5oTYiDoHqNKCrMlL8/jTy0oKMm/EeOq7hfCAevq5Pqs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スクリーンショット月別整理ツール","description":"スクリーンショットを月別にフォルダ分けしてくれるバッチファイルです。yyyy-mm-ddの形で日付がファイル名に入っているファイル全般に使用できます。\n\nCaptureMover.batをフォルダ分けしたいファイル（スクリーンショットなど）と同じフォルダに置いてダブルクリックすると月別にフォルダの生成、振り分けをしてくれます。デフォルトでは生成フォルダ名がVRChat-yyyy-mmになっているので、違うゲームのスクリーンショットを整理したい時は適宜バッチファイルを書き換えてください。\n\n使用、改変自由ですが、当プログラム及び当プログラム内のコードを流用したプログラムに関してフォルダ、ファイルの損失、破損などいかなる問題が起きても責任は取りかねますのでご了承願います。","url":"https://booth.pm/ja/items/1164874","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/913fa660-7e17-489f-994b-c09d257c678a/i/1164874/45afb6c3-3c6e-4d53-9f38-c10114387e7a_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uDnMjFi1zvsf+jGhtPl/4pXpTgDE41wr+e2zccSogeA="></script>
+    nonce="5oTYiDoHqNKCrMlL8/jTy0oKMm/EeOq7hfCAevq5Pqs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -441,9 +441,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
