--- a/VRChat/71/1164171.html
+++ b/VRChat/71/1164171.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "mtkdLpUlPyDhGdYXPWViz/UzaGqiV1NpPRZeTlBC3lA="></script>
+    "DUtcC7jkgBRQxQOEocOxVn8j66EI1Kh90gkIi4KwrPM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　ランタン","description":"・ランタン\n\nダンジョン用に調整された光源が入っています。Unity上で消すことも可能です。\nボーンが入っており、ダイナミックボーンの数値も設定済みです。\nVRChatでの使用を想定していますが、その他の用途でもご使用いただけます。\n\n\n-------------------------\n\n利用規約\n・本データ、改変されたデータの著作権は制作者が所有します。\n商用利用、改変が可能です。\n\n禁止事項\n・本データ、またはその一部を再配布すること\n・政治、宗教活動、他者に対する誹謗中傷目的での使用。\n・自作発言。\n\n・利用規約は変更される可能性があります。\n・いかなる場合においても、このモデルによって生じた責任を負いかねます。\n\nアップデート\nver1.1　使い方の説明に不備があったため修正しました。\n\n連絡先\n・ツイッター\n@Tsugu_VRC\n\n・gmail\ntsugu.vrc@gmail.com\n","url":"https://booth.pm/ja/items/1164171","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/3e3d8485-d999-4652-856e-1c6203a7e1e6/i/1164171/9fb99a65-9dc8-42e8-9e78-09c890e98748_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mtkdLpUlPyDhGdYXPWViz/UzaGqiV1NpPRZeTlBC3lA="></script>
+    nonce="DUtcC7jkgBRQxQOEocOxVn8j66EI1Kh90gkIi4KwrPM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -414,9 +414,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
