--- a/VRChat/40/1163740.html
+++ b/VRChat/40/1163740.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "e9GiYEv6ag3AE4FIe/Pq1/TN/41AcmgYNMEwaJLCA4c="></script>
+    "9h1+4aYdLz2KZXebblh9rU9J56S8CChrmWeAcnrGPDY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat向け】 バレンタインチョコレート","description":"【VRchat向け】バレンタインチョコレート 説明文\nバレンタインやカップルなどと甘いひと時がが送りたい時、女の子にお菓子を配りたい時、Unityと和解したい時などにお使いください。\n\n\n【内容物】\n・FBXファイル×1　△7928\n・テクスチャ×22\n・unitypackage\n・readme\n\n【利用規約】\n本モデルを購入した時点で本利用規約に同意したものとします。\n　利用規約の内容は変更する場合があり、最新のものが適用されます。\n\n1/28 再配布は一度のみ可とします。\n\n○禁止行為\n　以下のような使用を禁止致します。\n　・公序良俗に反する利用\n　・政治的・宗教的主張に関する利用\n　・製品の再販売\n　・自作発言等","url":"https://booth.pm/ja/items/1163740","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/9acc3a5a-1c6d-4055-a999-cdd91a9e8240/i/1163740/bce90329-9716-4257-a54b-7f2e1f8e5d7f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="e9GiYEv6ag3AE4FIe/Pq1/TN/41AcmgYNMEwaJLCA4c="></script>
+    nonce="9h1+4aYdLz2KZXebblh9rU9J56S8CChrmWeAcnrGPDY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -379,9 +379,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
