--- a/VRChat/12/1162812.html
+++ b/VRChat/12/1162812.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Doy7AKtz7Dp3KoXe5X8w/bc7qZ2b3RefJqkLgxbh7v4="></script>
+    "1jdv6RH5ruxlq1Cb2o4rChAy+lzC8TyYo/ylerCAwAI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"キウイバード","description":"VRChat対応アバター「キウイバード」\n(VRMにも対応） \n\n\nとあるイベント用に制作した果物型鳥類アバターです。\n試作でワールド巡りをした所、いろいろな方々に好評でしたので、\nこの度BOOTH販売させて頂きました。\n\n\n主にデスクトップPCでの操作を基準として制作しておりますので、\n手の動きは無い（モデルの手を作っていない）ですが、\n物を持ったりすることは問題なく行えます。\n\nそして、Shift+F〇キー操作によるシェイプ芸を\n少々仕込んでおりますので、お愉しみ下さい。\n\n\n\nポリゴン数：6898\n\nリップシンク対応\n\n『ユニティちゃんトゥーンシェーダーVer.2.0』使用\n\nunitypackage：有\n\n\n＜アップデート＞\n2019.03.02\nVRMファイルを追加しました。\n※3teneのソフトを使用するなどで確認できます。\n\n2020.4.15\nキウイバードのバリエーションを追加しました。\nバリエーション追加に伴い、使用シェーダーを\n「Cubed's unity shader」から\n『ユニティちゃんトゥーンシェーダーVer.2.0』に変更しました。\n\n変更前のキウイバードをダウンロード頂いた方には、\nお手数ですが『ユニティちゃんトゥーンシェーダーVer.2.0』\nの導入をお願いします。\n\n導入方法については、\nhttps://unity-chan.com/download/releaseNote.php?id=UTS2_0\n↑にて詳細が記載されております。\n\n2021.2.19\nクエスト対応アバター「KiwiBird_Quest」を追加しました。","url":"https://booth.pm/ja/items/1162812","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/a2bf9907-a323-492b-a7ce-a665215736f7/i/1162812/c4bd5f77-03cb-4211-9202-90470eb0d4bd_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Doy7AKtz7Dp3KoXe5X8w/bc7qZ2b3RefJqkLgxbh7v4="></script>
+    nonce="1jdv6RH5ruxlq1Cb2o4rChAy+lzC8TyYo/ylerCAwAI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -714,9 +714,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
