updated at: 2023-07-31 18:44, リノールに投げ銭する - リノールのどうぶつ雑貨店 - BOOTH

--- a/VRChat/64/1153664.html
+++ b/VRChat/64/1153664.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "59Ks1NUlPvptXlHXV6Ol1U37/xzfVRf9Q9Do+xa2JYs="></script>
+    "skE9F7kDflAOQTQm7+/nP/MeBlyCkSd7gjB/IQVOfgE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"リノールに投げ銭する","description":"リノールに投げ銭すると、\nVRChatで撮影したお礼の動画（１５秒程度）が見れます🎬\nmp4ファイルです。\n\nよろしくお願いします🙏","url":"https://booth.pm/ja/items/1153664","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/860474d4-d153-4e66-a594-a4e3e5e77c4e/i/1153664/a8951c22-a658-416d-b3e9-d6bff17ccc57_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="59Ks1NUlPvptXlHXV6Ol1U37/xzfVRf9Q9Do+xa2JYs="></script>
+    nonce="skE9F7kDflAOQTQm7+/nP/MeBlyCkSd7gjB/IQVOfgE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -403,9 +403,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
