updated at: 2023-07-31 18:45, 【VRChat向け】ろぼさーバッジ - ねこの国のお店 - BOOTH

--- a/VRChat/80/1152880.html
+++ b/VRChat/80/1152880.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "zKNvAsHS3drQMQCMyDl6hkbFrJfFOgiN76sPxaM3GhY="></script>
+    "181fNXE0N+o3t4QPg3qvMHkhvVXZuMaCOouSNr+2kgs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】ろぼさーバッジ","description":"🤖概要🤖\nホロライブ所属ロボ子さん（ https://twitter.com/robocosan ）のファンをバッジにしたVRChat向けアクセサリーです。\n電気、ハート、手錠の有無で計4種類です。\n\n🤖同梱内容🤖\n1.モデルデータ（FBX） \n2.Texture \n3.UnityPackage \n\n\n🤖注意事項🤖\n ・関係各所より配布停止通知を受けた場合、他自己都合により突如配布を停止場合がございますがご了承ください。 \n・モデルの改造、改変等は自由に行っていただいて構いませんが自作発言等はおやめください。 \n・本データを使用したモデルをアップロードすることで「VRChat EULA（ https://store.steampowered.com/eula/438100_eula_0 ）」に同意とみなさせていただきます。 \n・本データをVRCアバターペデスタルやデータ共有、販売サイトなどにアップロードして不特定多数が本データを使える状態にすることは禁止とさせていただきます。 ","url":"https://booth.pm/ja/items/1152880","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fcf0d975-c982-4865-beba-1cd6e5c30f4a/i/1152880/44724e6a-7a4a-4fd8-bb36-7b0925257f77_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zKNvAsHS3drQMQCMyDl6hkbFrJfFOgiN76sPxaM3GhY="></script>
+    nonce="181fNXE0N+o3t4QPg3qvMHkhvVXZuMaCOouSNr+2kgs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -383,9 +383,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
