updated at: 2023-07-31 18:48, プロトンライフルPR-2［VRChat向け3Dモデル］ - ダイダロス重工業 - BOOTH

--- a/VRChat/55/1364055.html
+++ b/VRChat/55/1364055.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "2KQh6AdOdNJqID8eslVs/ysHhggj2RuU24Rvj/XVd0g="></script>
+    "EOKRBOG1yJIcnipEd/SWgf/z/TR0iodHJPZRCZ0R+D8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"プロトンライフルPR-2［VRChat向け3Dモデル］","description":"VRChatでの利用を想定したオリジナル銃器モデルです。\n・2320ポリゴン\n\n・赤、青、緑、黄、白、灰、黒のテクスチャ7種同梱\n\n利用規約\n\nオリジナル武器3Dモデル「PR-2 プロトンライフル」\n\n本モデルを購入した時点で利用規約に同意したとみなします。\n利用規約の内容は変更する場合があり、最新のものが適用されます。\n本モデルの使用によって生じたトラブル、損失について、\nTR-96Cトールは一切の責任を負わないものとします。\n\n本モデル、改造モデルの著作権はTR-96Cトールに帰属するものとします。\n\n-------------------------\n\n許可項目\n\n1.本モデルの改造は自由です。\n\n2.本モデル、改造モデルをVRChat等へアップロードして使用する事を許可します。\n\n3.本モデル、改造モデルを\n　ゲーム、アニメーション、アプリケーション制作に使用することを許可します。\n\n4.本モデル、改造モデルを使用したバーチャルYoutuber等の活動への利用を許可します。\n　収益化も問題ありません。\n\n5.本モデル、改造モデルを使用した動画の作成・配信を許可します。\n\n6.本モデル、改造モデルを使用した営利目的・商用目的の利用を許可します。\n\n-------------------------\n\n禁止項目\n\n1.本モデル、改造モデルの再配布、販売を禁止します。\n\n2.本モデル、改造モデルを、購入者本人以外が使用できる状態にすることを禁止します。\n　例：VRChatのペデスタルやクローン可能アバター等、\n　　　購入者本人以外が利用できるようにする事を禁止します。\n\n3.本モデル、改造モデルを使用したゲーム等において、再度使用できる状態の\n　モデルデータを含む状態での配布を禁止します。\n\n4.政治、宗教活動、誹謗中傷目的での使用を禁止します。\n\n-------------------------","url":"https://booth.pm/ja/items/1364055","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/bc8b8fd2-fda2-42e6-9da9-7fdd7fe1e4ca/i/1364055/daffaa10-6f32-4cde-9eb9-9e7e820e31dd_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2KQh6AdOdNJqID8eslVs/ysHhggj2RuU24Rvj/XVd0g="></script>
+    nonce="EOKRBOG1yJIcnipEd/SWgf/z/TR0iodHJPZRCZ0R+D8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      384
+                                      385
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      384
+                                      385
                                     </div>
                                   </div></a>
                                 </div>
@@ -440,9 +440,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
