updated at: 2023-07-31 18:52, セーター白 - MOF - BOOTH

--- a/VRChat/62/1152762.html
+++ b/VRChat/62/1152762.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9FGcHakvZGDwBvhh9+vghWQR5uB8OSL/F7mUxnz3kek="></script>
+    "JqZJgGZG8bD6/mBqQocIM8RRWEb6lZe6eP/GVJvpTvA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"セーター白","description":"Vroid用ワンピースのテクスチャです。\n\n▼内容物\n・セーター1.png\n・スニーカー1.png\n\n▼DLされる前にお読みください\n　（Please refrain from　Use of the person who can't read the following sentences）\n\n・こちらはVroidStadio用のテクスチャです。\n3Dモデルテクスチャ用途以外への利用はしないでください。\n・著作権は放棄しておりません。\n・自分用に改変改造は自由ですが、変更の有無にかかわらず\n配布譲渡はおやめください。\n　（〇動画、VRchatなどへの使用。商用。\n　　×テクスチャを不特定多数がDLできる形でのアップロード）\n・ダウンロード、使用によって何か損害が生じても\nこちらで責任は負いかねます。\n・違法、公序良俗に違反する事への使用はご遠慮願います。\n・R-18な改造などはご遠慮ください。\n・自作発言はお止めください。\n・静止画動画、ライブ配信以外への使用に関しては法人のお客様は一度ご相談ください。\n・こちらの規約https://nogu.booth.pm/も一応目を通してください。\n\n尚、上記の文章は予告なく変更される場合があります。\nEven if you cannot read any part of this terms of use, I consider that I agreed to Terms of Use when you downloaded this data.\nカラーでご相談などありましたら（@nogvr1/Twitter）まで","url":"https://booth.pm/ja/items/1152762","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/981484f4-93cd-43d1-9788-03bb02eb5b4e/i/1152762/68f3a93a-25a5-421d-815b-ade3a3cdde42_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9FGcHakvZGDwBvhh9+vghWQR5uB8OSL/F7mUxnz3kek="></script>
+    nonce="JqZJgGZG8bD6/mBqQocIM8RRWEb6lZe6eP/GVJvpTvA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -468,9 +468,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
