updated at: 2023-07-31 18:58, モコモコの冬服(フルトラOK) - モッコの配布ステーション - BOOTH

--- a/VRChat/81/1147581.html
+++ b/VRChat/81/1147581.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "E1zvSJl7Be2wCr+oOnW2TM0GfAeOkFhGn9ckPeEdNVY="></script>
+    "gth3somDLTr7SizthOgNB+mmFWslzZgQ2cnEgXCwfV4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"モコモコの冬服(フルトラOK)","description":"▼概要\nVRChat用に制作されたHumanoid形式の3Dモデルです。\nVRchat等のゲーム、動画配信などで利用可能です。\nフルトラ(viveトラッカー及びkinect)で動くことを確認しました！\n\n▼配布物\n・モデルデータ(mokomoko-huyuhuku.fbx)\n・テクスチャ(.png 3枚)\n・Readme.txt\n・参考画像(.png 3枚)\n・改変用テクスチャ(kaihen.png 2枚　※随時追加)\n・Tareminshader\n\n●禁止事項\n・このモデルの作成者を騙る事\n・第三者への譲渡や、購入者以外が利用可能な形でのアップロード　　　例(VRChatでの、publicでのアップロード及びペデスタルとしてアップロード)\n・公序良俗に反する行為や目的、他社への誹謗中傷目的での利用\n・R-18、R-18Gコンテンツでの利用\n\n▼備考\n推奨シェーダー、TareminShederのダウンロードリンク\nhttps://gitlab.com/taremin/TareminShader\nシェーディングやリムライトの設定が簡単に出来るので作者お勧めのシェーダーです。\n利用する場合はリンク先のreadmeも読んでください。\n\n▼更新履歴\nver2 規約などを同梱しました\nver3 フルトラ対応確認、Tareminshader同梱、改変テクスチャ同梱\n\n▼お問い合わせ\nこの色の改変テクスチャ欲しい！などのご意見ご要望や、不具合やご希望についてはモッコ(@EMO_UME_HINA)へダイレクトメッセージをお願いします\nhttps://twitter.com/EMO_UME_HINA\n\n\n\nデザイン(@y_assk_y)\n\n\n","url":"https://booth.pm/ja/items/1147581","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/774132ac-30ae-404f-b7c8-602559cf4ddd/i/1147581/baf615df-d5ab-4227-8fa8-78d6eb1dd55d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="E1zvSJl7Be2wCr+oOnW2TM0GfAeOkFhGn9ckPeEdNVY="></script>
+    nonce="gth3somDLTr7SizthOgNB+mmFWslzZgQ2cnEgXCwfV4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -435,9 +435,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
