updated at: 2023-07-31 19:02, VRC向け キャンディケイン - Sacchan_VRC - BOOTH

--- a/VRChat/73/1144673.html
+++ b/VRChat/73/1144673.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "JpvjUZcJ/b3ka+2z0oUvwuP9O8XhIRVbqqYLXq5X+IA="></script>
+    "P6uKhrV4omt9z/mfzgJM/6o2r5c3gMtQdsVsRYj44DU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":" VRC向け キャンディケイン","description":"FBX PNG 形式\nポリゴン数は2076\n改変 OK\n再配布 OK","url":"https://booth.pm/ja/items/1144673","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/4076e1f7-b0f6-4ccc-b2e6-719466e98947/i/1144673/d5c4bb48-7bd0-402f-b3c2-4f023396c99b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JpvjUZcJ/b3ka+2z0oUvwuP9O8XhIRVbqqYLXq5X+IA="></script>
+    nonce="P6uKhrV4omt9z/mfzgJM/6o2r5c3gMtQdsVsRYj44DU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -350,9 +350,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
