updated at: 2023-07-31 19:03, Unity Mesh Utility V0.2 - HALBY Laboratories - BOOTH

--- a/VRChat/23/1142523.html
+++ b/VRChat/23/1142523.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "nt3NmyuzmK1xO3fbXDf31clDSbXGn/EmroXn6my1gLE="></script>
+    "fz4uHy5Ehg+vhFD7h2IdXo6G8+cEsNSI0TBKkUC3c+w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Unity Mesh Utility V0.2","description":"2019/01/29 注記\n本ライブラリはUniGLTFに依存しているため、UniGLTFがUnityプロジェクト内に存在しない場合エラーが発生します。その場合、こちらからUniGLTFのパッケージを別途追加してください。\nhttps://github.com/ousttrue/UniGLTF/releases\n\nBlendShapeのリネームツールに加えMesh Bakerでアバターを軽量化するのに必要なツールを別途加えました。\n\n2019/01/10 V0.2 アップデート\nMesh BakerのTexture Bakerの「Custom Shader Property Names」を自動で設定するエディタ拡張を同梱しました。Source Material To Combined Mappingの設定を済ませたうえで、コンポーネント右上の歯車のメニューからAuto Assign Prop Namesをクリックしてください。(isBumpの設定はガバなので要チェック)\n\nMesh Bakerを使った軽量化のやりかた(ざっくり)\n1. Mesh Bakerを使ってアバターのマテリアルとメッシュを統合します\n参考: http://kouhakuishi.blog.fc2.com/blog-entry-5.html\n(顔メッシュの名前はBody等元と同じにすると捗ります)\n2. RenameBlendShapesをアタッチしてうしろの余計な数字を取ります\n3. 上部メニューのHALBY→Save Mesh As Assetsを開き、結合したメッシュオブジェクトをAssetとして保存します\nPathの部分は\"Assets/ﾅﾝﾄｶｶﾝﾄｶ/mesh.asset\"みたいな感じにしてください\n4. RenameBlendShapesをデタッチしてアップロードします\n\n\n↓旧BlendShape Renameツールの説明文(同梱されています)\nUnity上でBlendShapeの名前を簡単に変更できるツールです\n\nRegexに変更したい名前、Replaceに置き換えたいワードを入力して、Rename!ボタンを押してください\n\n正規表現が利用できます(仕様はC#準拠)\n\n※事前にデータのバックアップは取っておいてください、モデルデータやシェイプキーが吹き飛んでも当方責任は取りません。","url":"https://booth.pm/ja/items/1142523","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/64d6cf4e-7b03-4338-9fdc-ca5b8647d504/i/1142523/c274c9c7-6dc0-4d3a-bca4-569042aa8420_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nt3NmyuzmK1xO3fbXDf31clDSbXGn/EmroXn6my1gLE="></script>
+    nonce="fz4uHy5Ehg+vhFD7h2IdXo6G8+cEsNSI0TBKkUC3c+w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -466,9 +466,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
