updated at: 2023-07-31 19:04, Alt_v1組み立てキット(3Dモデル) - Shop Alt - BOOTH

--- a/VRChat/89/1141789.html
+++ b/VRChat/89/1141789.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "NMMBt+hwsOW8ImnhPXboS4FyC9TFxoUgkKuEE28xUGQ="></script>
+    "/kDZHWJ3lOP5ibVciWmnKHVSfTmK1eQino4nMHeJKXs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Alt_v1組み立てキット(3Dモデル)","description":"◎素敵なスペック\n・ポリゴン数　おどろきの△666　黙示録\n・とても短足なhumanoid形式\n・リップシンクなんてものはありません\n・テクスチャたっぷり2種類同梱(ゆるい線あり・なし)\n・テクスチャ改造しまくれるPSD付き\n\n\n◎つかいかた\n・モデルデータは個人利用自由。改変分解合体ご自由に。\n(ただしキャラクターとしての利用は要相談)\n\n・VRCその他においてアバターとしての利用可\n　VRCではデスクトップ推奨　VRでも問題ありませんが手足がむにゃむにゃになります。※フルトラは非対応 すごいことになります\n・裏面表示、アウトライン等の設定をシェーダーで行うと視界が暗黒になる可能性が大きいのでご注意ください。\n　あたまが大きいです。\n\nアバターとして使用したり、ワールドに置いたり、動画の賑やかしモブとして使用したり、アバターの頭や肩に乗せてみたり、沢山色違いを並べてドミノしたり…使い方は自由です。えんじょい\n\n〇注意〇\n・Unityにてhumanoid設定をする際指のボーンがごっそり外れているので慎重に再設定してください。お手数おかけします。\n・無知故の不真面目な出来なのでノー文句でお願いします。\n\n\n▲▲自由とはいえ、ダメなこともあります。以下よく確認の上楽しんでください。▲▲\n・人の迷惑になる行為に使用することはだめです　悪ふざけはほどほどに\n・このデータ、このデータの改変物を二次配布・販売することはだめです。だめ\n・このデータはProject Alt(網野環)作です。万が一、他の人が自作だと偽っているのを発見した場合はこっそりとご連絡ください。","url":"https://booth.pm/ja/items/1141789","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/81ecc4de-6b51-48cf-8484-df24cee7afd3/i/1141789/10546a69-0883-43bd-b788-a71458f51494_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NMMBt+hwsOW8ImnhPXboS4FyC9TFxoUgkKuEE28xUGQ="></script>
+    nonce="/kDZHWJ3lOP5ibVciWmnKHVSfTmK1eQino4nMHeJKXs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -441,9 +441,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
